--- a/Space Invaders/MainPage.xaml
+++ b/Space Invaders/MainPage.xaml
@@ -8,6 +8,48 @@
     mc:Ignorable="d">
 
     <Grid x:Name="grid" Background="Black">
-        <Canvas x:Name="canvas" HorizontalAlignment="Left" VerticalAlignment="Top" Width="{Binding ElementName=grid, Path=ActualWidth}" Height="{Binding ElementName=grid, Path=ActualHeight}"></Canvas>
+
+        <Grid x:Name="gameTopBar" HorizontalAlignment="Stretch">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="0.05*"></RowDefinition>
+                <RowDefinition Height="1*"></RowDefinition>
+            </Grid.RowDefinitions>
+            <StackPanel Orientation="Horizontal" Grid.Row="0">
+                <TextBlock x:Name="scoreText" FontSize="20" Width="auto" Text="SCORE" Canvas.ZIndex="9" Margin="25,0" VerticalAlignment="Center" HorizontalAlignment="Left" Height="auto" Foreground="Yellow"
+                FontFamily="Fonts/space_invaders.ttf#Space Invaders" />
+                <TextBlock x:Name="scoreBlock" FontSize="20" Width="auto" Text="000" Canvas.ZIndex="9" Margin="0" VerticalAlignment="Center" HorizontalAlignment="Left" Height="auto" Foreground="Yellow"
+                FontFamily="Fonts/space_invaders.ttf#Space Invaders" />
+            </StackPanel>
+
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                <Image x:Name="life1" Source="ms-appx:///Assets/sprites/player.png" Height="30" Width="30" Margin="5,0"/>
+                <Image x:Name="life2" Source="ms-appx:///Assets/sprites/player.png" Height="30" Width="30" Margin="5,0"/>
+                <Image x:Name="life3" Source="ms-appx:///Assets/sprites/player.png" Height="30" Width="30" Margin="5,0,0,0"/>
+                <TextBlock x:Name="livesText" FontSize="20" Width="auto" Text="LIVES" Canvas.ZIndex="9" Margin="25,0" VerticalAlignment="Center" HorizontalAlignment="Right" Height="auto" Foreground="Yellow"
+                FontFamily="Fonts/space_invaders.ttf#Space Invaders" />
+            </StackPanel>
+        </Grid>
+
+        <Canvas x:Name="canvas" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="{Binding ElementName=grid, Path=ActualWidth}" Height="{Binding ElementName=grid, Path=ActualHeight}"></Canvas>
+
+        <StackPanel x:Name="gameOverPanel" HorizontalAlignment="Center" VerticalAlignment="Center" BorderThickness="5" Background="Black" BorderBrush="Yellow" Visibility="Collapsed">
+            <TextBlock x:Name="gameOverText" Text="Game Over" Margin="20" Foreground="Yellow" FontSize="70" FontFamily="Fonts/space_invaders.ttf#Space Invaders" />
+            <TextBlock x:Name="finalScoreText" Text="Score" Margin="0" Foreground="Yellow" HorizontalAlignment="Center" FontSize="20" FontFamily="Fonts/space_invaders.ttf#Space Invaders" />
+            <TextBlock x:Name="finalScoreBlock" Text="723413" Margin="0" Foreground="Yellow" HorizontalAlignment="Center" FontSize="40" FontFamily="Fonts/space_invaders.ttf#Space Invaders" />
+            <TextBox x:Name="playerName" PlaceholderText="Player name" Margin="20,0" HorizontalContentAlignment="Center" Foreground="Yellow" FontSize="25" FontFamily="Fonts/space_invaders.ttf#Space Invaders" Background="Black" BorderBrush="Yellow" SelectionHighlightColor="Yellow"/>
+            <Button x:Name="submitScoreBtn" 
+                VerticalContentAlignment="Bottom"
+                HorizontalContentAlignment="Center"
+                Content=" Submit Score" 
+                Margin="20"
+                BorderBrush="Yellow"
+                Foreground="Yellow"
+                Padding="5,5,5,0"
+                FontSize="25"
+                HorizontalAlignment="Center" 
+                VerticalAlignment="Center"
+                RequestedTheme="Light" FontFamily="Fonts/space_invaders.ttf#Space Invaders"/>
+        </StackPanel>
+
     </Grid>
 </Page>
