Game fully functional with Repeating Muisc and Sound FX
Game is ready to be tweaked and adjusted for levels, alien bullet speeds

--- a/Space Invaders/MainPage.xaml
+++ b/Space Invaders/MainPage.xaml
@@ -48,7 +48,7 @@
                 FontSize="25"
                 HorizontalAlignment="Center" 
                 VerticalAlignment="Center"
-                RequestedTheme="Light" FontFamily="Fonts/space_invaders.ttf#Space Invaders"/>
+                RequestedTheme="Light" FontFamily="Fonts/space_invaders.ttf#Space Invaders" Click="submitScoreBtn_Click"/>
         </StackPanel>
 
     </Grid>
