--- a/Space Invaders/MainPage.xaml
+++ b/Space Invaders/MainPage.xaml
@@ -7,49 +7,56 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid x:Name="grid" Background="Black">
+    <Grid>
 
-        <Grid x:Name="gameTopBar" HorizontalAlignment="Stretch">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="0.05*"></RowDefinition>
-                <RowDefinition Height="1*"></RowDefinition>
-            </Grid.RowDefinitions>
-            <StackPanel Orientation="Horizontal" Grid.Row="0">
-                <TextBlock x:Name="scoreText" FontSize="20" Width="auto" Text="SCORE" Canvas.ZIndex="9" Margin="25,0" VerticalAlignment="Center" HorizontalAlignment="Left" Height="auto" Foreground="Yellow"
-                FontFamily="Fonts/space_invaders.ttf#Space Invaders" />
-                <TextBlock x:Name="scoreBlock" FontSize="20" Width="auto" Text="000" Canvas.ZIndex="9" Margin="0" VerticalAlignment="Center" HorizontalAlignment="Left" Height="auto" Foreground="Yellow"
-                FontFamily="Fonts/space_invaders.ttf#Space Invaders" />
-            </StackPanel>
+        <Grid.Background>
+            <ImageBrush Stretch="None" ImageSource="ms-appx:///Assets/sprites/spacedust1.jpg" AlignmentY="Top" AlignmentX="Center"/>
+        </Grid.Background>
 
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-                <Image x:Name="life1" Source="ms-appx:///Assets/sprites/player.png" Height="30" Width="30" Margin="5,0"/>
-                <Image x:Name="life2" Source="ms-appx:///Assets/sprites/player.png" Height="30" Width="30" Margin="5,0"/>
-                <Image x:Name="life3" Source="ms-appx:///Assets/sprites/player.png" Height="30" Width="30" Margin="5,0,0,0"/>
-                <TextBlock x:Name="livesText" FontSize="20" Width="auto" Text="LIVES" Canvas.ZIndex="9" Margin="25,0" VerticalAlignment="Center" HorizontalAlignment="Right" Height="auto" Foreground="Yellow"
-                FontFamily="Fonts/space_invaders.ttf#Space Invaders" />
-            </StackPanel>
-        </Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="0.35*"></RowDefinition>
+            <RowDefinition Height="1*"></RowDefinition>
+            <RowDefinition Height="1*"></RowDefinition>
+        </Grid.RowDefinitions>
 
-        <Canvas x:Name="canvas" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="{Binding ElementName=grid, Path=ActualWidth}" Height="{Binding ElementName=grid, Path=ActualHeight}"></Canvas>
-
-        <StackPanel x:Name="gameOverPanel" HorizontalAlignment="Center" VerticalAlignment="Center" BorderThickness="5" Background="Black" BorderBrush="Yellow" Visibility="Collapsed">
-            <TextBlock x:Name="gameOverText" Text="Game Over" Margin="20" Foreground="Yellow" FontSize="70" FontFamily="Fonts/space_invaders.ttf#Space Invaders" />
-            <TextBlock x:Name="finalScoreText" Text="Score" Margin="0" Foreground="Yellow" HorizontalAlignment="Center" FontSize="20" FontFamily="Fonts/space_invaders.ttf#Space Invaders" />
-            <TextBlock x:Name="finalScoreBlock" Text="723413" Margin="0" Foreground="Yellow" HorizontalAlignment="Center" FontSize="40" FontFamily="Fonts/space_invaders.ttf#Space Invaders" />
-            <TextBox x:Name="playerName" PlaceholderText="Player name" Margin="20,0" HorizontalContentAlignment="Center" Foreground="Yellow" FontSize="25" FontFamily="Fonts/space_invaders.ttf#Space Invaders" Background="Black" BorderBrush="Yellow" SelectionHighlightColor="Yellow"/>
-            <Button x:Name="submitScoreBtn" 
-                VerticalContentAlignment="Bottom"
-                HorizontalContentAlignment="Center"
-                Content=" Submit Score" 
-                Margin="20"
+        <Button x:Name="highScoreBtn" 
+                Content="Hi-Scores"
+                HorizontalAlignment="Left" 
+                VerticalAlignment="Top"
+                Margin="10,10,0,0" 
+                Grid.Row="0"
+                Click="highScoreBtn_Click"
                 BorderBrush="Yellow"
                 Foreground="Yellow"
-                Padding="5,5,5,0"
-                FontSize="25"
+                FontFamily="Fonts/space_invaders.ttf#Space Invaders"
+                />
+        <Button x:Name="settingsBtn" 
+                Content="Settings" 
+                HorizontalAlignment="Right" 
+                VerticalAlignment="Top"
+                Margin="0,10,10,0"
+                Grid.Row="0"
+                BorderBrush="Yellow"
+                Foreground="Yellow"
+                FontFamily="Fonts/space_invaders.ttf#Space Invaders" Click="settingsBtn_Click"
+                />
+        <Image x:Name="textBlock" 
+                   HorizontalAlignment="Center" 
+                   Margin="0"
+                   Source="ms-appx:///Assets/sprites/logo.png"
+                   VerticalAlignment="Center" 
+                   Grid.Row="1"/>
+        <Button x:Name="playBtn" 
+                VerticalContentAlignment="Bottom"
+                HorizontalContentAlignment="Center"
+                Content=" New Game" 
+                BorderBrush="Yellow"
+                Foreground="Yellow"
+                FontSize="40"
                 HorizontalAlignment="Center" 
                 VerticalAlignment="Center"
-                RequestedTheme="Light" FontFamily="Fonts/space_invaders.ttf#Space Invaders" Click="submitScoreBtn_Click"/>
-        </StackPanel>
+                Margin="0"
+                Grid.Row="2" RequestedTheme="Light" FontFamily="Fonts/space_invaders.ttf#Space Invaders" Height="76" Width="261" Click="playBtn_Click" />
 
     </Grid>
 </Page>
