--- a/Space Invaders/Settings.xaml
+++ b/Space Invaders/Settings.xaml
@@ -32,11 +32,17 @@
                         <Setter Target="soundFxOff.FontSize" Value="15"/>
                         <Setter Target="musicOn.FontSize" Value="15"/>
                         <Setter Target="musicOff.FontSize" Value="15"/>
+                        <Setter Target="clearText.FontSize" Value="15"/>
+                        <Setter Target="clearBtn.FontSize" Value="13"/>
+                        <Setter Target="clearBtn.Width" Value="100"/>
+                        <Setter Target="clearBtn.Height" Value="30"/>
 
                         <Setter Target="soundFxText.Margin" Value="0,20,20,20"/>
                         <Setter Target="musicText.Margin" Value="0,20,20,20"/>
                         <Setter Target="volumeText.Margin" Value="0,20,20,20"/>
                         <Setter Target="soundFxOn.Margin" Value="20,20,0,20"/>
+                        <Setter Target="clearText.Margin" Value="20,40,0,20"/>
+                        <Setter Target="clearBtn.Margin" Value="20,20,0,20"/>
                         <Setter Target="musicOn.Margin" Value="20,20,0,20"/>
                         <Setter Target="slider.Margin" Value="20,10,0,20"/>
                         <Setter Target="slider.Width" Value="100"/>                 
@@ -113,6 +119,7 @@
                 <ColumnDefinition Width="0.5*"></ColumnDefinition>
                 <ColumnDefinition Width="0.5*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
+            
             <StackPanel Grid.Column="0">
                 <TextBlock x:Name="soundFxText" 
                        HorizontalAlignment="right" 
@@ -147,6 +154,18 @@
                        Foreground="Yellow"
                        FontFamily="Fonts/space_invaders.ttf#Space Invaders"
                        />
+                <TextBlock x:Name="clearText" 
+                       HorizontalAlignment="right" 
+                       Grid.Column="0" 
+                       Margin="40,78,40,0" 
+                       TextWrapping="Wrap" 
+                       Text="Clear Scores" 
+                       VerticalAlignment="Top"
+                       FontSize="30"
+                       Foreground="Yellow"
+                       FontFamily="Fonts/space_invaders.ttf#Space Invaders"
+                       />
+                
                 
             </StackPanel>
 
@@ -203,6 +222,18 @@
                 </StackPanel>
                 <Slider x:Name="slider" Width="195" HorizontalAlignment="Left" Margin="40,20" Foreground="Yellow" Value="100" RequestedTheme="Dark" Background="{x:Null}" />
 
+                <Button x:Name="clearBtn" 
+                        Content="RESET" 
+                        VerticalContentAlignment="Center"
+                        VerticalAlignment="Center" 
+                        Click="clearBtn_Click" 
+                        Width="180"
+                        Margin="40,70,10,0"
+                        BorderBrush="Red"
+                        FontSize="20"
+                        Foreground="Red"
+                        FontFamily="Fonts/space_invaders.ttf#Space Invaders"
+                        Height="52"/>
 
 
             </StackPanel>
