--- a/Space Invaders/GamePage.xaml
+++ b/Space Invaders/GamePage.xaml
@@ -8,6 +8,35 @@
     mc:Ignorable="d">
 
     <Grid x:Name="grid" Background="Black">
+        <VisualStateManager.VisualStateGroups>
+            <VisualStateGroup>
+                <VisualState x:Name="desktopView">
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowWidth="600"/>
+                    </VisualState.StateTriggers>
+                </VisualState>
+                <VisualState x:Name="mobileView">
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowWidth="0"/>
+                    </VisualState.StateTriggers>
+                    <VisualState.Setters>
+                        <Setter Target="gameOverText.FontSize" Value="40"/>
+                        <Setter Target="scoreText.FontSize" Value="15"/>
+                        <Setter Target="scoreText.Margin" Value="10,0"/>
+                        <Setter Target="scoreBlock.FontSize" Value="15"/>
+                        <Setter Target="livesText.FontSize" Value="15"/>
+                        <Setter Target="livesText.Margin" Value="10,0"/>
+                        <Setter Target="life1.Width" Value="20"/>
+                        <Setter Target="life1.Height" Value="20"/>
+                        <Setter Target="life2.Width" Value="20"/>
+                        <Setter Target="life2.Height" Value="20"/>
+                        <Setter Target="life3.Width" Value="20"/>
+                        <Setter Target="life3.Height" Value="20"/>
+                    </VisualState.Setters>
+                </VisualState>
+            </VisualStateGroup>
+
+        </VisualStateManager.VisualStateGroups>
 
         <Grid x:Name="gameTopBar" HorizontalAlignment="Stretch">
             <Grid.RowDefinitions>
@@ -36,7 +65,7 @@
             <TextBlock x:Name="gameOverText" Text="Game Over" Margin="20" Foreground="Yellow" FontSize="70" FontFamily="Fonts/space_invaders.ttf#Space Invaders" />
             <TextBlock x:Name="finalScoreText" Text="Score" Margin="0" Foreground="Yellow" HorizontalAlignment="Center" FontSize="20" FontFamily="Fonts/space_invaders.ttf#Space Invaders" />
             <TextBlock x:Name="finalScoreBlock" Text="723413" Margin="0" Foreground="Yellow" HorizontalAlignment="Center" FontSize="40" FontFamily="Fonts/space_invaders.ttf#Space Invaders" />
-            <TextBox x:Name="playerName" PlaceholderText="Player name" Margin="20,0" HorizontalContentAlignment="Center" Foreground="Yellow" FontSize="25" FontFamily="Fonts/space_invaders.ttf#Space Invaders" Background="Black" BorderBrush="Yellow" SelectionHighlightColor="Yellow"/>
+            <TextBox x:Name="playerName" PlaceholderText="Player name" MaxLength="10" Margin="20,0" HorizontalContentAlignment="Center" Foreground="Yellow" FontSize="25" FontFamily="Fonts/space_invaders.ttf#Space Invaders" Background="Black" BorderBrush="Yellow" SelectionHighlightColor="Yellow"/>
             <Button x:Name="submitScoreBtn" 
                 VerticalContentAlignment="Bottom"
                 HorizontalContentAlignment="Center"
